--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,12 @@ input
 }
 
 #console
-{ height : 600px
-; width  : 800px
+{ height   : 600px
+; width    : 800px
+; top      : 50%
+; left     : 50%
+; margin   : -300px -400px
+; position : fixed
 }
 
 #NewsTable
