--- a/css/style.css
+++ b/css/style.css
@@ -94,12 +94,14 @@ input
 }
 
 #console
-{ height   : 600px
+{ border   : 1px solid #ffffff
+; height   : 600px
 ; width    : 800px
 ; top      : 50%
 ; left     : 50%
 ; margin   : -300px -400px
 ; position : fixed
+; padding  : 5px 5px 5px 5px
 }
 
 #NewsTable
