--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,11 @@ input
 ; z-index  : 100001;
 }
 
+.windowHeader
+{ background : #ffffff
+; color      : #000000
+}
+
 .windowResize
 { position : absolute
 ; bottom   : -3px
@@ -111,8 +116,6 @@ input
 { display    : inline-block
 ; right      : 3px
 ; position   : absolute
-; background : #ffffff
-; color      : #000000
 }
 
 .windowHdrBtn
