--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,8 @@ input
 { position : absolute
 ; bottom   : -3px
 ; right    : 0
-; cursor  : pointer
+; cursor   : pointer
+; z-index  : 100001
 }
 
 .windowHdrGrp
