--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,8 @@ input
 }
 
 #console
-{ width   : 1024px
+{ width   : calc(100% - 10px)
+; height  : calc(100% - 10px);
 ; padding : 5px 5px 5px 5px
 }
 
@@ -156,7 +157,6 @@ input
 #GanttToolbar
 { position         : fixed
 ; background-color : #000000
-; width            : 1009px
 ; z-index          : 100001
 }
 
