--- a/css/style.css
+++ b/css/style.css
@@ -132,9 +132,10 @@ input
 }
 
 .console
-{ width   : calc(100% - 10px)
-; height  : calc(100% - 10px);
-; padding : 5px 5px 5px 5px
+{ width      : calc(100% - 10px)
+; height     : calc(100% - 10px)
+; padding    : 5px 5px 5px 5px
+; background : #000000
 }
 
 .NewsTable
@@ -189,6 +190,7 @@ input
 ; display          : block
 ; overflow-x       : hidden
 ; overflow-y       : hidden
+; white-space      : nowrap
 }
 
 .cmdSelect
