--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,8 @@ input
 }
 
 .windowHeader
-{ background : #101530
-; color      : #ffffff
+{ background : #ffa500
+; color      : #000000
 }
 
 .windowBody
