--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ input
 }
 
 .windowFrame
-{ border   : 1px solid #ffa500
+{ border   : 1px solid #ff4500
 ; height   : 768px
 ; width    : 1024px
 ; position : absolute
