--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ input
 }
 
 .windowFrame
-{ border   : 1px solid #ff4500
+{ border   : 1px solid #ffa500
 ; height   : 768px
 ; width    : 1024px
 ; position : absolute
@@ -103,20 +103,22 @@ input
 .windowHeader
 { background : #ffa500
 ; color      : #000000
+; border     : 1px solid #000000
 }
 
 .windowBody
-{ height : calc(100% - 18px)
+{ height : calc(100% - 20px)
 ; width  : 100%
 ; overflow-wrap : break-word
 }
 
 .windowResize
 { position : absolute
+; color    : #ffa500
 ; bottom   : -3px
 ; right    : 0
 ; cursor   : pointer
-; z-index  : 100010
+; z-index  : 100001
 }
 
 .windowHdrGrp
