--- a/css/style.css
+++ b/css/style.css
@@ -139,13 +139,17 @@ input
 }
 
 .deskButton
-{ border     : 1px solid #ffa500
-; background : #000000
-; color      : #ffa500
-; height     : 20px
-; z-index    : 30000
-; display    : inline-block
-; cursor     : pointer
+{ border         : 1px solid #ffa500
+; background     : #000000
+; color          : #ffa500
+; height         : 20px
+; width          : 20px
+; position       : relative
+; text-align     : center
+; vertical-align : middle
+; z-index        : 30000
+; display        : inline-block
+; cursor         : pointer
 }
 
 .console
