--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,9 @@ input
 }
 
 .windowBody
-{ height : calc(100% - 20px)
-; width  : 100%
+{ border : 1px solid #000000
+; height : calc(100% - 20px)
+; width  : calc(100% -  2px)
 ; overflow-wrap : break-word
 }
 
