--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 
 html
-{ font-family : courier
+{ font-family : consolas
 ; font-size   : 16px
 }
 
@@ -60,7 +60,7 @@ select
 ; padding     : 0px 0px 0px 0px
 ; background  : #000000
 ; color       : #ffa500
-; font-family : courier
+; font-family : consolas
 ; font-size   : 16px
 ; outline     : none
 ; width       : 200px
@@ -72,7 +72,7 @@ button
 ; padding     : 0px 0px 0px 0px
 ; background  : #ffa500
 ; color       : #000000
-; font-family : courier
+; font-family : consolas
 ; font-size   : 16px
 ; outline     : none
 }
@@ -87,7 +87,7 @@ input
 ; margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
 ; outline     : none
-; font-family : courier
+; font-family : consolas
 ; font-size   : 16px
 ; height      : 23px
 ; color       : #ffa500
@@ -164,7 +164,7 @@ input
 .NewsTable
 { white-space : nowrap
 ; width       : calc(100% - 20px)
-; font-family : courier
+; font-family : consolas
 ; font-size   : 16px
 }
 
@@ -308,12 +308,12 @@ input
 { border      : 1px solid #000000
 ; background  : #ffa500
 ; color       : #000000
-; font-family : courier
+; font-family : consolas
 ; font-size   : 16px
 }
 
 .GanttTable
-{ font-family    : courier
+{ font-family    : consolas
 ; font-size      : 12px
 ; text-align     : left
 ; border-spacing : 0px
@@ -372,7 +372,7 @@ input
 .tooltip .tooltiptext
 { visibility    : hidden
 ; width         : 225px
-; font-family   : courier
+; font-family   : consolas
 ; font-size     : 12px
 ; background    : #000000
 ; color         : #ffa500
@@ -391,7 +391,7 @@ input
 ; top              : 50%
 ; left             : 100%
 ; margin-top       : -5px
-; font-family      : courier
+; font-family      : consolas
 ; font-size        : 12px
 ; color            : #000000
 }
