updated css input

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ input
 ; background-color : #000000
 ; font-family      : consolas
 ; font-size        : 14px
+; outline          : none
 }
 
 #console
