--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,11 @@ input::placeholder
 
 }
 
+.xmark
+{ color     : #ffa500
+; animation : blinker 1s linear infinite
+}
+
 @keyframes blink
 {  0% { opacity: 0.0 }
  100% { opacity: 1.0 }
