modified:   css/style.css

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body
 ; vertical-align   : middle
 ; align-content    : center
 ; margin           : 50px 50px 50px 50px
+; line-height      : 95%
 }
 
 a
