--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ body
 ; color            : #ffffff
 ; vertical-align   : middle
 ; align-content    : center
-; margin           : 50px 50px 50px 50px
-; line-height      : 95%
+; margin           : 5% 5% 5% 5%
+; line-height      : 2
 }
 
 a
