--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,8 @@ input::placeholder
 }
 
 #consolePrompt
-{ border : 1px solid #000000
+{ border : 1px solid #000050
+; background-color : #000050
 }
 
 .xmark
