--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ input::placeholder
 }
 
 #consolePrompt
-{ border : 1px solid #000060
+{ border : 1px solid #0000A0
 ; background-color : #000020
 }
 
