--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ input::placeholder
 }
 
 #consolePrompt
-{ border : 1px solid #0000A0
+{ border : 1px solid #FFFFFF
 ; background-color : #000060
 }
 
