--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ input::placeholder
 ; background-color : #000000
 ; wrap             : soft
 ; width            : 100%
+; color            : #FFA500
 }
 
 .xmark
