--- a/css/style.css
+++ b/css/style.css
@@ -1,145 +1,64 @@
-::-webkit-scrollbar
-{ width : 15px
+body {
+    margin: 0;
+    padding: 0;
+    font-family: monospace;
+    font-size: 14px;
+    background-color: #000;
+    color: #fff;
+    line-height: 1.5;
 }
 
-::-webkit-scrollbar-track
-{ background : #101010
+header {
+    background-color: #111;
+    padding: 1em 2em;
+    border-bottom: 1px solid #333;
 }
 
-::-webkit-scrollbar-thumb
-{ background : #ffffff
+header h1 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #ffa500;
 }
 
-html
-{ font-family : monospace
-; font-size   : 14px
+nav {
+    margin-top: 1em;
 }
 
-body
-{ background-color : #000000
-; color            : #ffffff
-; vertical-align   : middle
-; align-content    : center
-; line-height      : 1.5
-; overflow-wrap    : break-word
-; word-wrap        : break-word
-; word-break       : break-word
-; -ms-hyphens      : auto
-; -moz-hyphens     : auto
-; -webkit-hyphens  : auto
-; hyphens          : auto
+nav button {
+    background-color: #000;
+    color: #ffa500;
+    border: 1px solid #ffa500;
+    padding: 0.5em 1em;
+    margin-right: 0.5em;
+    font-family: monospace;
+    cursor: pointer;
 }
 
-table
-{ border         : 0px
-; border-spacing : 0px
+nav button:hover {
+    background-color: #ffa500;
+    color: #000;
 }
 
-th
-{ text-decoration : underline
+main {
+    padding: 2em;
+    max-width: 800px;
+    margin: auto;
 }
 
-@media(max-width : 400px) {
-  body {
-  ; margin : 14px 5% 5% 5%
-  }
+a {
+    color: #ffa500;
+    text-decoration: none;
 }
 
-@media(min-width : 401px) {
-  body {
-  ; margin : 14px 20% 5% 20%
-  }
+a:hover {
+    text-decoration: underline;
 }
 
-a
-{ text-decoration : none
-; color           : #ffa500
+footer {
+    text-align: center;
+    margin-top: 3em;
+    padding: 2em;
+    color: #555;
+    font-size: 0.9em;
 }
 
-a:hover
-{ text-decoration : underline
-}
-
-p
-{ font-weight : normal
-; list-style  : none outside none
-; padding     : 0px 0px 0px 0px
-}
-
-ul
-{ margin-top    : 0
-; margin-bottom : 0
-}
-
-button
-{ border      : 1px solid #000000
-; margin      : 0px 0px 0px 0px
-; padding     : 0px 0px 0px 0px
-; background  : #ffa500
-; color       : #000000
-; font-family : monospace
-; font-size   : 14px
-; outline     : none
-}
-
-button:hover
-{ background : #000000
-; color      : #ffa500
-}
-
-input
-{ width            : 100%
-; padding          : 0px 0px 0px 0px
-; margin           : 0px 0px 0px 0px
-; color            : #ffa500
-; background-color : #000000
-; font-family      : monospace
-; font-size        : 14px
-; outline          : none
-}
-
-input::placeholder
-{ color : #ffa500
-}
-
-.consoleCommand
-{ color : #ffa500
-}
-
-#console
-{ width  : 100%
-; height : 100%
-}
-
-#consolePrompt
-{ border           : 0px solid #000000
-; background-color : #000000
-; width            : 100%
-; color            : #FFA500
-; border           : none
-; outline          : none
-; resize           : none
-}
-
-#helpPanel
-{ background-color : #000020
-; width            : 100%
-}
-
-#helpPanel table
-{ width : 100%
-}
-
-#helpPanel tr:hover
-{ background-color : #000050
-}
-
-.xmark
-{ color     : #ffa500
-; animation : blink 1s linear infinite
-}
-
-@keyframes blink
-{  0% { opacity: 0.0 }
- 100% { opacity: 1.0 }
-}
