--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,23 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: monospace;
+    font-family: consolas;
     font-size: 14px;
-    background: #000;
+    background-color: #000;
     color: #fff;
+    line-height: 1.5;
 }
 
-header, footer {
-    background: #111;
-    color: #ffa500;
+header {
+    background-color: #111;
     padding: 1em 2em;
     border-bottom: 1px solid #333;
-    text-align: center;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #ffa500;
 }
 
 nav {
@@ -20,22 +25,24 @@ nav {
 }
 
 nav button {
-    background: #000;
+    background-color: #000;
     color: #ffa500;
     border: 1px solid #ffa500;
     padding: 0.5em 1em;
-    margin: 0 0.25em;
+    margin-right: 0.5em;
+    font-family: monospace;
     cursor: pointer;
 }
 
 nav button:hover {
-    background: #ffa500;
+    background-color: #ffa500;
     color: #000;
 }
 
 main {
     padding: 3em;
     max-width: 90%;
+    max-height: 90%;
     margin: auto;
 }
 
@@ -48,34 +55,67 @@ a:hover {
     text-decoration: underline;
 }
 
+footer {
+    text-align: center;
+    margin-top: 3em;
+    padding: 2em;
+    color: #555;
+    font-size: 0.9em;
+}
+
 pre {
     margin: 0;
+    padding: 0;
     white-space: pre-wrap;
     word-wrap: break-word;
 }
 
 #terminal {
+    background: #000000;
+    color: #ffa500;
     padding: 1em;
+    font-family: monospace;
+    display: flex;
     width: 100%;
     box-sizing: border-box;
+}
+
+#terminal-prompt-table {
+    width: 100%;
 }
 
 #terminal,
 #terminal-prompt-table,
 #terminal-prompt-table td,
 #terminal-prompt-table tr {
+  border: none;
+  padding: 0;
+  margin: 0;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+
+#terminal-input-cell {
     width: 100%;
-    border: none;
-    padding: 0;
-    margin: 0;
-    border-spacing: 0;
-    border-collapse: collapse;
 }
 
 #terminal-input {
-    width: 100%;
-    background: #000;
+    background: #000000;
     color: #ffa500;
     border: none;
     outline: none;
+    font-family: monospace;
+    width: 100%;
+}
+
+#terminal-output {
+    margin: 0;
+    padding: 0;
+    min-height: 0px;
+}
+
+#terminal-prompt {
+    color: #ffa500;
+    white-space: nowrap;
 }
